--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,13 @@
         </plugin>
 
         <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.1</version>
+        </plugin>
+
+        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.8.1</version>
         </plugin>
 
         <plugin>
